finalize the tests